# cough_cough

./: .gitignore  CMakeLists.txt  README.md  main.c
P_threads_N_threads/: P_threads_N_threads.c  P_threads_N_threads.h
data/: DATASET_FORMAT  all_timestamps.csv  in_example.csv  out_example.csv  out_file.csv  out_threads.csv  outm.csv  plot.py  year0.txt
data/in/: all_timestamps.csv
doxygen/html/: _c_make_c_compiler_id_8c.html  _p__threads___n__threads_8c.html  _p__threads___n__threads_8c.js  _p__threads___n__threads_8h.html  _p__threads___n__threads_8h.js  _p__threads___n__threads_8h_source.html  annotated.html  annotated.js  classes.html  dir_067664515177176e4010990e1a86b8f0.html  dir_067664515177176e4010990e1a86b8f0.js  dir_09783e9882b7d8a274c21188cec435f3.html  dir_09783e9882b7d8a274c21188cec435f3.js  dir_199740af06b86b298fb433bb56640233.html  dir_199740af06b86b298fb433bb56640233.js  dir_392dee8348eaef945cfddccd17519196.html  dir_392dee8348eaef945cfddccd17519196.js  dir_4a17d5bd33428fa99d504cd384d4a8d2.html  (+122 more)
from_N_processes_to_file/: from_N_processes_to_file.c  from_N_processes_to_file.h
from_N_processes_to_parent_to_M_processes/: from_N_processes_to_parent_to_M_processes.c  from_N_processes_to_parent_to_M_processes.h
from_N_processes_to_parent_to_file/: from_N_processes_to_parent_to_file.c  from_N_processes_to_parent_to_file.h
from_N_threads_to_file/: from_N_threads_to_file.c  from_N_threads_to_file.h
from_socket_to_file/: from_socket_to_file.c  from_socket_to_file.h
libs/io/: io.c  (+1 more)
map_reduce/: map_reduce.c  map_reduce.h
py/: hello.py  plot.py
(+142 files in other folders)
